some adjustment to make main.sh runnable